--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,13 @@
 *{
     direction:rtl
 }
+:root{
+    --activeLinkBackgroundWhite:#72c152;
+
+}
+.router-link-active{
+    color:var(--activeLinkBackgroundWhite)!important  ;
+    padding: 4px 14px 20px;
+    background: white;
+    border-radius: 10px 10px 0 0;
+ }
